[package]
name = "opengrok-search"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "~2.33.3"
levenshtein = "1.0.5"
threadpool = "1.0"
num_cpus = "1.0"

[dependencies.rusqlite]
version = "0.26.0"
features = ["bundled"]